# plyra-memory

./: .env.example  .gitignore  README.md  docker-compose.yml  generate_docs.py  mkdocs.yml  pypi_test.py  pyproject.toml  verify_docs.py
.github/: ci-cd-template.yml  plyra-context.md  plyra-memory-full-architecture.html  plyra-memory-schema-reference.html  pyproject-template.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
.tmp/: chatbot_test.db  fact_test.db  persist_test.db
.tmp/chatbot_test_vectors/: chroma.sqlite3
.tmp/fact_test_vectors/: chroma.sqlite3
.tmp/persist_test_vectors/: chroma.sqlite3
docs/: changelog.md  concepts.md  guard-integration.md  index.md  quickstart.md
docs/adapters/: autogen.md  crewai.md  index.md  langchain.md  langgraph.md  openai-agents.md  plain-python.md
docs/api/: config.md  context-for.md  index.md  layers.md  recall.md  remember.md  schema.md
docs/extraction/: custom.md  index.md  llm.md  regex.md
docs/guides/: cross-session.md  fact-extraction.md  local-vs-server.md  multi-agent.md  production.md
docs/server/: azure.md  index.md  quickstart.md
examples/: __init__.py  chatbot.py  step5_test.py  step6_test.py  step7_test.py
plyra_memory/: __init__.py  cli.py  config.py  memory.py  schema.py
plyra_memory/adapters/: __init__.py  autogen.py  crewai.py  langchain.py  langgraph.py  openai_agents.py
plyra_memory/backends/: __init__.py  http.py
plyra_memory/consolidation/: __init__.py  promoter.py  summarizer.py
plyra_memory/embedders/: __init__.py  base.py  sentence_transformers.py
plyra_memory/exporters/: __init__.py  base.py  stdout.py
plyra_memory/extraction/: __init__.py  base.py  llm.py  regex.py
plyra_memory/layers/: __init__.py  episodic.py  semantic.py  working.py
plyra_memory/retrieval/: __init__.py  cache.py  engine.py
plyra_memory/server/: __init__.py  app.py
plyra_memory/storage/: __init__.py  base.py  sqlite.py
plyra_memory/vectors/: __init__.py  base.py  chroma.py
site/: 404.html  index.html  sitemap.xml
site/adapters/: index.html
site/adapters/autogen/: index.html
site/adapters/crewai/: index.html
site/adapters/langchain/: index.html
site/adapters/langgraph/: index.html
site/adapters/openai-agents/: index.html
site/adapters/plain-python/: index.html
site/api/: index.html
site/api/config/: index.html
site/api/context-for/: index.html
site/api/layers/: index.html
site/api/recall/: index.html
site/api/remember/: index.html
site/api/schema/: index.html
site/changelog/: index.html
site/concepts/: index.html
site/extraction/: index.html
site/extraction/custom/: index.html
site/extraction/llm/: index.html
site/extraction/regex/: index.html
site/guard-integration/: index.html
site/guides/cross-session/: index.html
site/guides/fact-extraction/: index.html
site/guides/local-vs-server/: index.html
site/guides/multi-agent/: index.html
site/guides/production/: index.html
site/quickstart/: index.html
site/search/: search_index.json
site/server/: index.html
site/server/azure/: index.html
site/server/quickstart/: index.html
site/stylesheets/: extra.css
tests/: conftest.py
tests/integration/: test_memory.py
tests/unit/: test_adapters.py  test_config.py  test_groq_extractor.py  test_layers.py  test_memory_api.py  test_retrieval.py  test_schema.py  test_storage.py
